--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,13 @@ description: A prototype app for parking management
 environment:
   sdk: ">=2.17.0 <3.0.0"
 
+
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.5.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   google_fonts: ^6.1.0
 
 dev_dependencies:
